# demostats

./: .gitignore  CMakeLists.txt
kaitai/: CMakeLists.txt  frame.ksy  header.ksy  hl2demo.ksy  message.ksy  player_info.ksy  string_table_update.h
kaitai/kaitai-runtime/kaitai/: kaitaistream.h
messages/: CMakeLists.txt
messages/google/protobuf/: descriptor.proto
src/: game_events.h  main.cpp  string_table_update.h  version.h.in
src/hl2demo/: dstream.cpp  dstream.h  dstruct.h  frame.cpp  frame.h  header.h  message.cpp  message.h  string_table_update.cpp  string_table_update.h
tests/: CMakeLists.txt  test_main.cpp
